# cudaSolarTomography

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_A_matrix.cpp  cross_validation.cu  hal_build_pybind.sh  material.md  projection.cu  projection_reconstruct.cu  projection_validation.cu  reconstruct.cu  reconstruct_template.cu  setup.py  sim_validation.cu  solar_tom_notes.org  wrapper.cu
config/: 20080201-20080214_cor1a.conf  20080201-20080214_lasco_c2.conf  20080201_cor1a.conf  lasco_c2.conf  lasco_c2_2007.conf  lasco_c2_2007_partial.conf  lasco_c2_2023.conf  lasco_c2_2023_partial.conf  lasco_c2_2023_training.conf  lasco_c2_2023_validation.conf  lasco_c2_partial.conf  my_lasco_c2.conf
include/: build_A_matrix.cuh  build_A_matrix.hpp  build_A_matrix_dyn.cuh  build_params.hpp  constants.hpp  error_check.cuh  gpu_matrix.hpp  operators.cuh  operators.hpp  optimizer.hpp  output.hpp  sparse_matrix.hpp  timer.hpp  type.hpp  utility.cuh  utility.hpp  vector_maths.cuh  vector_maths.hpp
libwcs/: Makefile  fitsfile.c  fitsfile.c.orig  fitsfile.h  ty2read.c  wcscat.h  wcscat.h.orig
notebooks/: Check INSTR RMIN RMAX.ipynb  Compare A.ipynb  Fetch COR1 data.ipynb  Generate x_hat 0.ipynb  Plot slices.ipynb  Plot y.ipynb  Validate get_orbit.ipynb
python/: build_A_matrix.py  dgrad2.py  download_orbit.py  ephemeris_dates.py  experiments.py  fetch_lasco_c2.py  index_legacy.py  make_config.py  make_cross_validation_config.py  plot_error_vs_virtual_viewpoints.ipynb  projection.py  projection_validation.py  read_mhd.py  reconstruct.py  resolution.py  scipy_io_util.py
solver/: CMakeLists.txt
solver/include/CudaLBFGS/: cost_function.h  error_checking.h  lbfgs.h  timer.h
solver/lbfgs/: cost_function.cu  lbfgs.cpp  lbfgs.cu  linesearch_gpu.h
tests/: calc_nrpt.py  compare_A.py  grid.py  los.py  plot_bin.py  plot_x_slices.py  plot_y.py  plot_y_hat.py  reconstruct.py  scipy_io_util.py  to_mat.py  vec_to_mat.py  viz_los.py
tests/los/: CMakeLists.txt  Config.cpp  Config.hpp  FITS_Image.cpp  FITS_Image.hpp  HollowSphere.cpp  HollowSphere.hpp  MAT_File.cpp  MAT_File.hpp  coordinates.cpp  coordinates.hpp  fts2mat.cpp  los.cpp  scatter.cpp  scatter.hpp
tests/los/cmake/: FindCFITSIO.cmake  FindMATIO.cmake  FindWCSLIB.cmake
tests/los/test_get_orbit/: CMakeLists.txt  get_orbit.c  get_orbit.h  libwcs  r3misc.c  r3misc.h  test_get_orbit.c
